--- a/C3-Semantic.html
+++ b/C3-Semantic.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <header>
-        <h1>YASH KUMAR</h1>
+        <h1>Sanjyot Bodhe</h1>
     </header>
     <nav>
         <ul>
@@ -21,6 +21,7 @@
         This is a <span>semantic</span> web page example.
     </div>
     <br>
-    <div><footer>Yash Kumar - September 9, 2025</footer></div>
+    <div><footer>Sanjyot Bodhe - September 9, 2025</footer></div>
 </body>
+
 </html>
