--- a/about_me.html
+++ b/about_me.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <header>
-      <h1>KSHITIZ LOHARUKA</h1>
+      <h1>SANJYOT BODHE</h1>
       <nav>
         <a href="#">home/</a><br /><a href="#">about/</a><br /><a href="#"
           >contact</a
@@ -19,16 +19,17 @@
         <article>
           <h2>ABOUT ME</h2>
           <p>
-            I am from the holy city of
-            <span style="color: aqua">Deoghar,Jharkkhand</span>. I love
+            I am from the city of
+            <span style="color: aqua">Nagpur, Maharashtra</span>. I love
             interacting with new people around me
           </p>
         </article>
       </section>
       <footer>
-        <p style="font-size: small; ">KSHITIZ LOHARUKA</p>
+        <p style="font-size: small; ">Sanjyot Bodhe</p>
         <p style="font-size: small; ">14/08/2025</p>
       </footer>
     </div>
   </body>
 </html>
+
