--- a/firstpage.HTML
+++ b/firstpage.HTML
@@ -11,7 +11,7 @@
   <body>
     <h1>WELCOME TO MY WEBPAGE</h1>
     <p>
-      Hi , this is <strong> Kshitiz Loharuka</strong>,<br />
+      Hi , this is <strong> Sanjyot Bodhe</strong>,<br />
       I love watching various sports as well as playing them.
     </p>
     <img
@@ -23,3 +23,4 @@
     <a href="https://www.formula1.com/">Formula 1</a>
   </body>
 </html>
+
