--- a/profilecard.html
+++ b/profilecard.html
@@ -58,10 +58,11 @@
 <body>
     <div class="card">
         <img src="Screenshot 2025-09-17 001647.png" alt="my image">
-        <h2>Kshitiz Loharuka</h2>
+        <h2>Sanjyot Bodhe</h2>
         <p>Fresher at Scaler School of Technology | 19 years</p>
         <button>CONTACT</button>
         <BUTTON>PORTFOLIO</BUTTON>
     </div>
 </body>
+
 </html>
