Update and rename weekandplan.html to weekendplan.html

--- a/weekendplan.html
+++ b/weekendplan.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="weekand"> WEEKAND PLAN</div>
+    <div class="weekand"> WEEKEND PLAN</div>
     <div class="ordered">
         <h4>Places to Visit</h4>
         <ol>
@@ -40,4 +40,5 @@
 
 
 </body>
+
 </html>
